# compact-middleware

./: .gitignore  LICENSE  README.md  pyproject.toml
compact_middleware/: __init__.py  collapse.py  compaction.py  config.py  decision.py  microcompact.py  middleware.py  prompts.py  restoration.py  state.py  tokens.py  truncation.py
examples/: basic_usage.py
tests/: test_decision.py  test_microcompact.py  test_prompts.py  test_tokens.py  test_truncation.py
