[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compact-middleware"
version = "0.1.1"
description = "Claude Code's compaction engine, repackaged as a drop-in DeepAgents middleware"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Emanuele" },
]
keywords = [
    "llm",
    "context-window",
    "compaction",
    "summarization",
    "deepagents",
    "langchain",
    "langgraph",
    "middleware",
    "claude",
    "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "pydantic>=2",
]

[project.optional-dependencies]
deepagents = [
    "deepagents>=0.1",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/emanueleielo/compact-middleware"
Documentation = "https://github.com/emanueleielo/compact-middleware#readme"
Repository = "https://github.com/emanueleielo/compact-middleware"
Issues = "https://github.com/emanueleielo/compact-middleware/issues"

[tool.hatch.build.targets.wheel]
packages = ["compact_middleware"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["compact_middleware"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
